# inducoapi

./: .gitignore  Pipfile  README.md  Taskfile.yml  json2openapi.py  pyproject.toml  sort_json.py
.github/workflows/: ci.yml  pytest.yml
examples/: employees.json  employees.yaml  new_employee_req.json  new_employee_resp.json
inducoapi/: __init__.py  __main__.py  inducoapi.py
json2openapi/: json2openapi.py
tests/: invalid.yaml  test_get_employees_200.yaml  test_get_employees_200_info.yaml  test_get_employees_200_params.yaml  test_get_employees_200_response.yaml  test_get_employees_200_response_mediatype.yaml  test_get_employees_200_response_noexample.yaml  test_get_employees_200_response_ref.yaml  test_inducoapi.py  test_json2openapi.py  test_post_employees_201_request_response.yaml
