[tool.poetry]
name = "inducoapi"
version = "1.0.0"
description = "A simple python program to generate OpenApi documentation by supplying request/response bodies."
authors = ["Matteo Pergolesi <matpergo@gmail.com>"]
license = "Apache License 2.0"
readme = 'README.md'
repository = "https://github.com/TheWall89/inducoapi"
homepage = "https://github.com/TheWall89/inducoapi"
keywords = ['openapi', 'rest']

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3.1"
openapi3 = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
my-script = 'inducoapi:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

