[tool.poetry]
name = "inducoapi"
version = "2.1.4"
description = "A simple python program to generate OpenApi documentation by supplying request/response bodies."
authors = ["Matteo Pergolesi <matpergo@gmail.com>"]
license = "Apache License 2.0"
readme = 'README.md'
repository = "https://github.com/TheWall89/inducoapi"
homepage = "https://github.com/TheWall89/inducoapi"
keywords = ['openapi', 'rest']

[tool.poetry.dependencies]
python = ">=3.8.0,<3.13"
pyyaml = "^6.0"
openapi-spec-validator = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
inducoapi = 'inducoapi.__main__:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

